# beaverhabits-tui

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
infra/: ccli  test_runner.py
src/beaverhabits_tui/: __main__.py  app.py
src/beaverhabits_tui/client/cli/typer/: commands.py
src/beaverhabits_tui/client/http/httpx/: habits_client.py  http_client.py  user_client.py
src/beaverhabits_tui/configuration/: configuration.py
src/beaverhabits_tui/models/: habit.py  user.py
src/beaverhabits_tui/services/: grapheme_truncator.py
src/beaverhabits_tui/views/rich/: render.py
src/functional/: alias.py
tests/: conftest.py
tests/e2e/: helpers.py  test_e2e_default_view.py
tests/unit/: test_renderer.py  test_rich_renderer.py
